--- a/index.html
+++ b/index.html
@@ -5,13 +5,8 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <meta http-equiv="X-UA-Compatible" content="ie=edge" />
         <title>Document</title>
-        <style>
-            body {
-                background: pink;
-            }
-        </style>
     </head>
     <body>
-        <div>neirong</div>
+        <div id="root"></div>
     </body>
 </html>
